# mailmunge

./: .gitignore  DIST-CONTENTS  Makefile.in  README.md  configure  configure.ac
.github/: README.md
.github/workflows/: github-action.yml
c/: Makefile.in  config.h.in  drop_privs.c  dynbuf.c  dynbuf.h  embperl.c  event.c  event.h  event_tcp.c  event_tcp.h  eventpriv.h  gen_id.c  mailmunge-multiplexor.c  mailmunge.c  mailmunge.h  milter_cap.c  milter_cap.h  mm-mx-ctrl.c  notifier.c  ps_status.c  rm_r.c  syslog-fac.c  utils.c
debian/: changelog  control  libmailmunge-action-boilerplate-perl.install  libmailmunge-action-dkimsigner-perl.install  libmailmunge-action-stream-perl.install  libmailmunge-perl.install  libmailmunge-test-getmx-perl.install  libmailmunge-test-greylist-perl.install  libmailmunge-test-rspamd-perl.install  libmailmunge-test-smtpforward-perl.install  libmailmunge-test-spamassassin-perl.install  libtest-mailmunge-perl.install  mailmunge-base.install  mailmunge-base.postinst  mailmunge-base.postrm  rules  watch-multiple-mailmunges.install
docker/: Dockerfile.bullseye.postfix  Dockerfile.bullseye.sendmail  Dockerfile.buster.postfix  Dockerfile.buster.sendmail  Dockerfile.debian.postfix  Dockerfile.debian.sendmail  Dockerfile.postfix  Dockerfile.rocky.postfix  Dockerfile.rocky.sendmail  Dockerfile.sendmail  build-all-containers  build-docker-container  run-all-regression-tests  run-regression-tests-on-docker
docker/docker-testfiles/: etc-default-mailmunge  mailmunge-test-savemail.pl  qualify-hostname.sh  set-apt-proxy  setup-tests.sh  waiter.pl
docs/: COPYING  Changelog  README  architecture.odg  style.css
etc/default/: mailmunge.example.in  mailmunge.sample.in
examples/: mailmunge-filter.pl.example
logo/: mailmunge-logo.blend
perl/: Makefile.PL
perl/inc/Module/Install/: Makefile.pm  Metadata.pm
perl/lib/: Mailmunge.pm.in
perl/lib/Mailmunge/: Action.pm  Base.pm  Constants.pm.in  Context.pm  Filter.pm  Response.pm  Test.pm
perl/lib/Mailmunge/Action/: Boilerplate.pm  DKIMSigner.pm  Stream.pm
perl/lib/Mailmunge/Filter/: Compat.pm
perl/lib/Mailmunge/Test/: GetMX.pm  Greylist.pm  Rspamd.pm  SMTPForward.pm  SpamAssassin.pm
perl/lib/Test/Mailmunge/: Filter.pm  RegressionUtils.pm  SMTPServer.pm  Tmpdir.pm  Utils.pm
perl/t/: 00-smoketest.t  02-pod.t  03-pod-coverage.t  05-canonical.t  09-response.t  10-smtp-forward.t  20-filter-roundtrip.t  21-bad-roundtrip.t  30-filter-exe.t  31-inputmsg-fh  40-filter-everything.t  50-boilerplate.t  55-dkim-sign.t  60-addrcpt.t  70-delrcpt.t  75-change-subject.t  76-delhdr.t  77-change-hdr.t  78-delete-all-hdrs.t  79-chgsender.t  80-add-entity.t  81-addhdr.t  90-add-part.t  91-getmx.t  92-rdns.t  93-greylist.t  94-rspamd.t  95-decode.t
perl/t/data/: for-boilerplate.msg  generic-msg
perl/t/data/boilerplate/all_atend/: NEWBODY
perl/t/data/boilerplate/all_atstart/: NEWBODY
perl/t/data/boilerplate/one_atend/: NEWBODY
perl/t/data/boilerplate/one_atstart/: NEWBODY
perl/t/data/dkim/: private-key.pem  public-key.pem
perl/t/data/for-dkim/: RESULTS  RESULTS-MODIFIED
perl/t/data/msg-with-everything/: NEWBODY  RESULTS  inputmsg
perl/t/data/msg-with-exe/: NEWBODY  RESULTS  inputmsg
perl/t/filters/: bad-filter.pl  default-filter.pl  test-filter.pl
pod/: index.pod  installing.pod  mailmunge-multiplexor.pod.in  mailmunge-notify.pod  mailmunge-protocol.pod  mailmunge.pod.in  mm-mx-ctrl.pod.in  watch-multiple-mailmunges.pod
regression-tests/filter/: mailmunge-filter.pl
regression-tests/t/: 01-helo.t  02-mail.t  03-rcpt.t  04-data.t  05-mta-detection.t  06-stream.t  07-boilerplate.t  08-add-recipient.t  09-del-recipient.t  10-add-entity.t  11-add-part.t  12-change-subject.t  13-delhdr.t  14-change-hdr.t  15-delete-all-hdrs.t  16-chgsender.t  17-add-hdr.t  18-greylist.t  19-rspamd.t  20-dkim-signing.t
regression-tests/t/expected/: boilerplate-end-all  boilerplate-end-one  boilerplate-start-all  boilerplate-start-one
regression-tests/t/msgs/: delete-part.msg  discard-msg  eicar-msg  for-boilerplate.msg  for-dkim-signing.msg  gtube-msg
script/: mailmunge-util.in  watch-multiple-mailmunges.tcl
spec/: mailmunge.spec.in
synfig/: animated-logo.sifz
systemd-units/: mailmunge-multiplexor.service.in  mailmunge.service.in
sysvinit/: mailmunge.in
tools/: fix-anchors.pl  fix-links.pl  make-dist.sh  make-html-docs
